/def/abis* updates

--- a/conf/linked.data.gov.au/org/ausbigg.conf
+++ b/conf/linked.data.gov.au/org/ausbigg.conf
@@ -1,28 +1,39 @@
 # https://linked.data.gov.au/def/abis
 # ABIS
+# Standard
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/specification.html [R=302,L]
+
 # Profile Parts
 RewriteRule ^/def/abis/overview$                        https://ausbigg.github.io/abis/overview.html [R=302,L]
-RewriteRule ^/def/abis/spec$                            https://ausbigg.github.io/abis/specification.html [R=302,L]
+RewriteRule ^/def/abis/spec$                            https://ausbigg.github.io/abis/specification.html [R=302,L]  # legacy
 RewriteRule ^/def/abis/validator$                       https://ausbigg.github.io/abis/validator.ttl [R=302,L]
 RewriteRule ^/def/abis/context.json$                    https://ausbigg.github.io/abis/context.json [R=302,L]
 
-# Schema
+
+# Profiles of ABIS
+# BDR
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/profile.ttl [R=302,L]
-RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.io/abis/profile.ttl [R=302,L]
-RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/standard.html [R=302,L]
-
-# Specification Parts
-RewriteRule ^/def/abis/$                                https://ausbigg.github.io/abis/specification.html\#_namespaces [R=302,L,NE]
-RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_requirements [R=302,L,NE]
-# rules
-RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_conformance_classes [R=302,L,NE]
-RewriteRule ^/def/abis/eg/$                             https://ausbigg.github.io/abis/specification.html\#_examples [R=302,L,NE]
-RewriteRule ^/def/abis/sh/(.*)$                         https://raw.githubusercontent.com/AusBIGG/abis/master/validator.ttl [R=302,L,NE]
+RewriteRule ^/def/abis/bdr$                             https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr.ttl$                         https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr                              https://ausbigg.github.io/abis/specification.html#profile-bdr  [R=302,L]
 
 
-# https://linked.data.gov.au/def/bdr-msg
-# BDR Messages Ontology
-RewriteRule ^/def/bdr-msg/                              https://ausbigg.github.io/bdrm-ont/bdrm.html [R=302,L]
-RewriteRule ^/def/bdr-msg/status/                       https://ausbigg.github.io/bdrm-ont/bdrm.html [R=302,L]
+# Sub-Models
+# ABIS Project Model
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/abis/projects$                         https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/projects.ttl$                     https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/projects                          https://ausbigg.github.io/abis/specification.html#annex-a  [R=302,L]
+
+# ABIS Data Release Model
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/abis/data-release$                     https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/data-release.ttl$                 https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/data-release                      https://ausbigg.github.io/abis/specification.html#annex-b  [R=302,L]
