--- a/conf/linked.data.gov.au/org/ausbigg.conf
+++ b/conf/linked.data.gov.au/org/ausbigg.conf
@@ -18,8 +18,8 @@ RewriteRule ^/def/abis/context.json$                    https://ausbigg.github.i
 # BDR
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis/bdr$                             https://ausbigg.github.io/abis/abis.ttl [R=302,L]
-RewriteRule ^/def/abis/bdr.ttl$                         https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr$                             https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr.ttl$                         https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
 RewriteRule ^/def/abis/bdr                              https://ausbigg.github.io/abis/specification.html#profile-bdr  [R=302,L]
 
 
@@ -27,13 +27,13 @@ RewriteRule ^/def/abis/bdr                              https://ausbigg.github.i
 # ABIS Project Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis/projects$                         https://ausbigg.github.io/abis/abis.ttl [R=302,L]
-RewriteRule ^/def/abis/projects.ttl$                     https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/projects$                         https://ausbigg.github.io/abis/projects$.ttl [R=302,L]
+RewriteRule ^/def/abis/projects.ttl$                     https://ausbigg.github.io/abis/projects$.ttl [R=302,L]
 RewriteRule ^/def/abis/projects                          https://ausbigg.github.io/abis/specification.html#annex-a  [R=302,L]
 
 # ABIS Data Release Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis/data-release$                     https://ausbigg.github.io/abis/abis.ttl [R=302,L]
-RewriteRule ^/def/abis/data-release.ttl$                 https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis/data-release$                     https://ausbigg.github.io/abis/data-release.ttl [R=302,L]
+RewriteRule ^/def/abis/data-release.ttl$                 https://ausbigg.github.io/abis/data-release.ttl [R=302,L]
 RewriteRule ^/def/abis/data-release                      https://ausbigg.github.io/abis/specification.html#annex-b  [R=302,L]
