--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -1,7 +1,19 @@
 # https://linked.data.gov.au/def/nslvoc
 # National Species List Vocabulary
-RewriteRule ^/def/nslvoc.ttl$                           https://biodiversity.org.au/voc/aunsl.ttl [R=302,NE,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/nslvoc(.*)$                           https://biodiversity.org.au/voc/aunsl.ttl [R=302,NE,L]
-RewriteRule ^/def/nslvoc(.*)$                           https://biodiversity.org.au/voc/aunsl.html [R=302,NE,L]
+RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
+RewriteRule ^/def/nslvoc.ttl$                           https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
+RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.html [R=302,NE,L]
+
+# National Species List Data Model
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/nsl($|/.*)$                           https://kurrawong.github.io/nsl-model/nsl.ttl [R=302,L]
+RewriteRule ^/def/nsl.ttl$                              https://kurrawong.github.io/nsl-model/nsl.ttl [R=302,L]
+RewriteRule ^/def/nsl($|/.*)$                           https://kurrawong.github.io/nsl-model/spec.html [R=302,NE,L]
+
+# Profile Parts
+RewriteRule ^/def/nsl/spec$                             https://kurrawong.github.io/nsl-model/specification.html [R=302,L]  # legacy
+RewriteRule ^/def/nsl/validator$                        https://kurrawong.github.io/nsl-model/validator.ttl [R=302,L]
+RewriteRule ^/def/nsl/context.json$                     https://kurrawong.github.io/nsl-model/context.json [R=302,L]
