/def/abis profile

--- a/conf/linked.data.gov.au/org/ausbigg.conf
+++ b/conf/linked.data.gov.au/org/ausbigg.conf
@@ -3,8 +3,8 @@
 # Standard
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/abis.ttl [R=302,L]
-RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.io/abis/abis.ttl [R=302,L]
+RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/profile.ttl [R=302,L]
+RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.io/abis/profile.ttl [R=302,L]
 RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/specification.html [R=302,L]
 
 # Profile Parts
@@ -13,17 +13,6 @@ RewriteRule ^/def/abis/spec$                            https://ausbigg.github.i
 RewriteRule ^/def/abis/validator$                       https://ausbigg.github.io/abis/validator.ttl [R=302,L]
 RewriteRule ^/def/abis/context.json$                    https://ausbigg.github.io/abis/context.json [R=302,L]
 
-
-# Profiles of ABIS
-# BDR
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/abis/bdr$                             https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
-RewriteRule ^/def/abis/bdr.ttl$                         https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
-RewriteRule ^/def/abis/bdr                              https://ausbigg.github.io/abis/specification.html#profile-bdr  [R=302,L]
-
-
-# Sub-Models
 # ABIS Project Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -37,3 +26,14 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/abis/data-release$                     https://ausbigg.github.io/abis/data-release.ttl [R=302,L]
 RewriteRule ^/def/abis/data-release.ttl$                 https://ausbigg.github.io/abis/data-release.ttl [R=302,L]
 RewriteRule ^/def/abis/data-release                      https://ausbigg.github.io/abis/specification.html#annex-b  [R=302,L]
+
+
+# Profiles of ABIS
+# BDR
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/abis/bdr$                             https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr.ttl$                         https://ausbigg.github.io/abis/bdr.ttl [R=302,L]
+RewriteRule ^/def/abis/bdr                              https://ausbigg.github.io/abis/specification.html#profile-bdr  [R=302,L]
+
+
