--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -9,9 +9,9 @@ RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org
 # National Species List Data Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/nsl($|/.*)$                           https://kurrawong.github.io/nsl-model/profile.ttl [R=302,L]
+RewriteRule ^/def/nsl$                                  https://kurrawong.github.io/nsl-model/profile.ttl [R=302,L]
 RewriteRule ^/def/nsl.ttl$                              https://kurrawong.github.io/nsl-model/profile.ttl [R=302,L]
-RewriteRule ^/def/nsl($|/.*)$                           https://kurrawong.github.io/nsl-model/spec.html [R=302,NE,L]
+RewriteRule ^/def/nsl$                                  https://kurrawong.github.io/nsl-model/spec.html [R=302,NE,L]
 
 # Profile Parts
 RewriteRule ^/def/nsl/validator$                        https://kurrawong.github.io/nsl-model/validator.ttl [R=302,L]
