--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -28,9 +28,9 @@ RewriteRule ^/def/csdm/parcels$ "https://icsm-au.github.io/3d-csdm/parcels.html"
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/csdm/surveyfeats$ "https://icsm-au.github.io/3d-csdm/surveyfeats.ttl" [R=302,L]
-RewriteRule ^/def/csdm/surveyfeats.ttl$ "https://icsm-au.github.io/3d-csdm/surveyfeats.ttl" [R=302,L]
-RewriteRule ^/def/csdm/surveyfeats$ "https://icsm-au.github.io/3d-csdm/surveyfeats.html" [R=302,NE,L]
+RewriteRule ^/def/csdm/surveyfeatures$ "https://icsm-au.github.io/3d-csdm/surveyfeats.ttl" [R=302,L]
+RewriteRule ^/def/csdm/surveyfeatures.ttl$ "https://icsm-au.github.io/3d-csdm/surveyfeats.ttl" [R=302,L]
+RewriteRule ^/def/csdm/surveyfeatures$ "https://icsm-au.github.io/3d-csdm/surveyfeats.html" [R=302,NE,L]
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
