--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -92,6 +92,13 @@ RewriteRule ^/def/address-status-type($|/.*)$ "https://vocabs.gsq.digital/object
 RewriteRule ^/def/address-status-type(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/address-status-type$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/address-status-type($|/.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/address-status-type$1" [R=302,NE,L]
 
+# https://linked.data.gov.au/def/fsdf
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
+RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
+RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html [R=302,L,NE]
+
 # https://linked.data.gov.au/def/fsdf/themes
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
