--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -95,7 +95,7 @@ RewriteRule ^/def/address-status-type($|/.*)$ "https://vocabs.gsq.digital/object
 # https://linked.data.gov.au/def/fsdf
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
+RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L,QSD]
 RewriteRule ^/def/fsdf.ttl$                              https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/rdf/ontologies/fsdf.ttl [R=302,L]
 RewriteRule ^/def/fsdf$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html [R=302,L,NE]
 
