--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -126,10 +126,39 @@ RewriteRule ^/def/loci(.*)$                             https://csiro-enviro-inf
 
 # https://linked.data.gov.au/def/project
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/project(.*)$                          https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
 RewriteRule ^/def/project(.*).ttl$                      https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
-RewriteRule ^/def/project/?$				https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]
+RewriteRule ^/def/project/?$                            https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]
 RewriteMap tolower int:tolower
 RewriteRule ^/def/project(.*)$                          https://dr-shorthair.github.io/project-ont/docs/\#${tolower:$1} [R=302,L,NE]
+
+
+# https://linked.data.gov.au/def/causalnetwork
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.*).ttl$                https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
+RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.*).rdf$                https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
+RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.*).jsonld$             https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.*).json$               https://causalnetworks.azurewebsites.net/def/causalnetwork.json [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.*)$                    https://causalnetworks.azurewebsites.net/def/causalnetwork$1 [R=302,QSA,L]
+
+# https://linked.data.gov.au/dataset/causalnetwork
+# identifier maps
+# this covers /id/{name}, /id/node/{UUID}, and /id/link/{UUID}
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/(.*).ttl [R=302,QSA,L]
+RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/(.*) [R=302,QSA,L]
+RewriteRule ^/dataset/causalnetwork/(.*)$               https://causalnetworks.azurewebsites.net/causalnetwork/(.*) [R=302,QSA,L]
