--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -731,22 +731,22 @@ RewriteRule ^/def/geofeatures(.*)$                      https://github.com/geolo
 # profile: SKOS, meadiatype: turtle
 RewriteCond %{QUERY_STRING} _profile=skos
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 RewriteCond %{QUERY_STRING} _profile=skos
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
 
 RewriteCond %{QUERY_STRING} _profile=skos [OR]
 RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/ [OR]
