tighten cuasual network patterns

--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -7,12 +7,12 @@ RewriteRule ^/dataset/agiftcrsth                        https://github.com/CSIRO
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/mb16mb11				https://raw.githack.com/CSIRO-enviro-informatics/mb16mb11-linkset/master/header.ttl [L,R=302]
-RewriteRule ^/dataset/mb16mb11				https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]
+RewriteRule ^/dataset/mb16mb11				  https://raw.githack.com/CSIRO-enviro-informatics/mb16mb11-linkset/master/header.ttl [L,R=302]
+RewriteRule ^/dataset/mb16mb11				  https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/mb16cc				https://raw.githack.com/CSIRO-enviro-informatics/mb16cc-linkset/master/header.ttl [L,R=302]
-RewriteRule ^/dataset/mb16cc				https://github.com/CSIRO-enviro-informatics/mb16cc-linkset [L,R=302]
+RewriteRule ^/dataset/mb16cc				    https://raw.githack.com/CSIRO-enviro-informatics/mb16cc-linkset/master/header.ttl [L,R=302]
+RewriteRule ^/dataset/mb16cc				    https://github.com/CSIRO-enviro-informatics/mb16cc-linkset [L,R=302]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/dataset/addr1605mb11			https://raw.githack.com/CSIRO-enviro-informatics/addr1605mb11-linkset/master/header.ttl [L,R=302]
@@ -23,16 +23,16 @@ RewriteRule ^/dataset/addr1605mb16			https://raw.githack.com/CSIRO-enviro-inform
 RewriteRule ^/dataset/addr1605mb16			https://github.com/CSIRO-enviro-informatics/addr1605mb16-linkset [L,R=302]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/addrmb11				https://raw.githack.com/CSIRO-enviro-informatics/addrmb11-linkset/master/header.ttl [L,R=302]
-RewriteRule ^/dataset/addrmb11				https://github.com/CSIRO-enviro-informatics/addrmb11-linkset [L,R=302]
+RewriteRule ^/dataset/addrmb11				  https://raw.githack.com/CSIRO-enviro-informatics/addrmb11-linkset/master/header.ttl [L,R=302]
+RewriteRule ^/dataset/addrmb11				  https://github.com/CSIRO-enviro-informatics/addrmb11-linkset [L,R=302]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/addrmb16				https://raw.githack.com/CSIRO-enviro-informatics/addrmb16-linkset/master/header.ttl [L,R=302]
-RewriteRule ^/dataset/addrmb16				https://github.com/CSIRO-enviro-informatics/addrmb16-linkset [L,R=302]
+RewriteRule ^/dataset/addrmb16				  https://raw.githack.com/CSIRO-enviro-informatics/addrmb16-linkset/master/header.ttl [L,R=302]
+RewriteRule ^/dataset/addrmb16				  https://github.com/CSIRO-enviro-informatics/addrmb16-linkset [L,R=302]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/addrcatch				https://raw.githack.com/CSIRO-enviro-informatics/addrcatch-linkset/master/header.ttl [L,R=302]
-RewriteRule ^/dataset/addrcatch				https://github.com/CSIRO-enviro-informatics/addrcatch-linkset [L,R=302]
+RewriteRule ^/dataset/addrcatch				  https://raw.githack.com/CSIRO-enviro-informatics/addrcatch-linkset/master/header.ttl [L,R=302]
+RewriteRule ^/dataset/addrcatch				  https://github.com/CSIRO-enviro-informatics/addrcatch-linkset [L,R=302]
 
 
 # https://linked.data.gov.au/dataset/data-policies
@@ -138,20 +138,20 @@ RewriteRule ^/def/project(.*)$                          https://dr-shorthair.git
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
-RewriteRule ^/def/causalnetwork(.*).ttl$                https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork/?$                      https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.ttl|/.*\.ttl)$         https://causalnetworks.azurewebsites.net/def/causalnetwork.ttl [R=302,QSA,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
 RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
 RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
-RewriteRule ^/def/causalnetwork(.*).rdf$                https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork/?$                      https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.rdf|/.*\.rdf)$         https://causalnetworks.azurewebsites.net/def/causalnetwork.rdf [R=302,QSA,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
 RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
 RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-RewriteRule ^/def/causalnetwork/?                       https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
-RewriteRule ^/def/causalnetwork(.*).jsonld$             https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
-RewriteRule ^/def/causalnetwork(.*).json$               https://causalnetworks.azurewebsites.net/def/causalnetwork.json [R=302,QSA,L]
-RewriteRule ^/def/causalnetwork(.*)$                    https://causalnetworks.azurewebsites.net/def/causalnetwork$1 [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork/?$                      https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.jsonld|/.*\.jsonld)$   https://causalnetworks.azurewebsites.net/def/causalnetwork.jsonld [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork(.json|/.*\.json)$       https://causalnetworks.azurewebsites.net/def/causalnetwork.json [R=302,QSA,L]
+RewriteRule ^/def/causalnetwork($|/.*)$                 https://causalnetworks.azurewebsites.net/def/causalnetwork$1 [R=302,QSA,L]
 
 # https://linked.data.gov.au/dataset/causalnetwork
 # identifier maps
@@ -159,6 +159,6 @@ RewriteRule ^/def/causalnetwork(.*)$                    https://causalnetworks.a
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/(.*).ttl [R=302,QSA,L]
-RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/(.*) [R=302,QSA,L]
-RewriteRule ^/dataset/causalnetwork/(.*)$               https://causalnetworks.azurewebsites.net/causalnetwork/(.*) [R=302,QSA,L]
+RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/$1.ttl [R=302,QSA,L]
+RewriteRule ^/dataset/causalnetwork/id/(.*)$            https://causalnetworks.azurewebsites.net/causalnetwork/id/$1 [R=302,QSA,L]
+RewriteRule ^/dataset/causalnetwork($|/.*)$             https://causalnetworks.azurewebsites.net/causalnetwork$1 [R=302,QSA,L]
