--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -126,10 +126,90 @@ RewriteRule ^/def/loci(.*)$                             https://csiro-enviro-inf
 
 # https://linked.data.gov.au/def/project
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/project(.*)$                          https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
 RewriteRule ^/def/project(.*).ttl$                      https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
-RewriteRule ^/def/project/?$				https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]
+RewriteRule ^/def/project/?$				            https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]
 RewriteMap tolower int:tolower
 RewriteRule ^/def/project(.*)$                          https://dr-shorthair.github.io/project-ont/docs/\#${tolower:$1} [R=302,L,NE]
+
+
+# https://linked.data.gov.au/def/asls-land-surface
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
+RewriteRule ^/def/asls-land-surface                     https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface [R=302,L]
+RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro/land-surface-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/asls-landform
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
+RewriteRule ^/def/asls-landform                         https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform [R=302,L]
+RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/landform-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/asls-location
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/location/accuracy-4$1 [R=302,L]
+RewriteRule ^/def/asls-location                         https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/location/accuracy-4 [R=302,L]
+RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/location$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/asls-soil-profile
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
+RewriteRule ^/def/asls-soil-profile                    https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile [R=302,L]
+RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro/soil-profile-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/asls-substrate
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-substrate($|/.+)$               https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/substrate/texture-A$1 [R=302,L]
+RewriteRule ^/def/asls-substrate                       https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/substrate [R=302,L]
+RewriteRule ^/def/asls-substrate($|/.+)$               https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/substrate$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/asls-vegetation
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/asls-vegetation($|/.+)$              https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/vegetation-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/vegetation$1 [R=302,L]
+RewriteRule ^/def/asls-vegetation                      https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/vegetation-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/vegetation [R=302,L]
+RewriteRule ^/def/asls-vegetation($|/.+)$              https://vocabs.ardc.edu.au/repository/api/lda/csiro/vegetation-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/vegetation$1 [R=302,L]
+
+
+
+# https://linked.data.gov.au/def/scm-swcm-1992
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/scm-swcm-1992($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource.ttl?uri=http://anzsoil.org/def/au/scm/swcm-1992$1 [R=302,L]
+RewriteRule ^/def/scm-swcm-1992.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource.ttl?uri=http://anzsoil.org/def/au/scm/swcm-1992 [R=302,L]
+RewriteRule ^/def/scm-swcm-1992($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource?uri=http://anzsoil.org/def/au/scm/swcm-1992$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/scm-scma-2011
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/scm-scma-2011($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource.ttl?uri=http://anzsoil.org/def/au/scm/scma-2011$1 [R=302,L]
+RewriteRule ^/def/scm-scma-2011.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource.ttl?uri=http://anzsoil.org/def/au/scm/scma-2011 [R=302,L]
+RewriteRule ^/def/scm-scma-2011($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource?uri=http://anzsoil.org/def/au/scm/scma-2011$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/spmile
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
+RewriteRule ^/def/spmile$                               https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile [R=302,L]
+RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/soil
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/soil($|/.+)$                          https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
+RewriteRule ^/def/soil                                  https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
+RewriteRule ^/def/soil($|/.+)$                          https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,L]
