--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -138,7 +138,7 @@ RewriteRule ^/def/project(.*)$                          https://dr-shorthair.git
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
-RewriteRule ^/def/asls-land-surface                     https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface [R=302,L]
+RewriteRule ^/def/asls-land-surface.ttl$                https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface [R=302,L]
 RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro/land-surface-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
 
 
@@ -146,7 +146,7 @@ RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
-RewriteRule ^/def/asls-landform                         https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform [R=302,L]
+RewriteRule ^/def/asls-landform.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform [R=302,L]
 RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/landform-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
 
 
@@ -154,7 +154,7 @@ RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/location/accuracy-4$1 [R=302,L]
-RewriteRule ^/def/asls-location                         https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/location/accuracy-4 [R=302,L]
+RewriteRule ^/def/asls-location.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/location/accuracy-4 [R=302,L]
 RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-location-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/location$1 [R=302,L]
 
 
@@ -162,7 +162,7 @@ RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
-RewriteRule ^/def/asls-soil-profile                    https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile [R=302,L]
+RewriteRule ^/def/asls-soil-profile.ttl$               https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile [R=302,L]
 RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro/soil-profile-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
 
 
@@ -170,7 +170,7 @@ RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.a
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-substrate($|/.+)$               https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/substrate/texture-A$1 [R=302,L]
-RewriteRule ^/def/asls-substrate                       https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/substrate [R=302,L]
+RewriteRule ^/def/asls-substrate.ttl$                  https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/substrate [R=302,L]
 RewriteRule ^/def/asls-substrate($|/.+)$               https://vocabs.ardc.edu.au/repository/api/lda/csiro/asls-substrate-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/substrate$1 [R=302,L]
 
 
@@ -178,7 +178,7 @@ RewriteRule ^/def/asls-substrate($|/.+)$               https://vocabs.ardc.edu.a
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-vegetation($|/.+)$              https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/vegetation-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/vegetation$1 [R=302,L]
-RewriteRule ^/def/asls-vegetation                      https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/vegetation-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/vegetation [R=302,L]
+RewriteRule ^/def/asls-vegetation.ttl$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/vegetation-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/vegetation [R=302,L]
 RewriteRule ^/def/asls-vegetation($|/.+)$              https://vocabs.ardc.edu.au/repository/api/lda/csiro/vegetation-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/vegetation$1 [R=302,L]
 
 
@@ -203,7 +203,7 @@ RewriteRule ^/def/scm-scma-2011($|/.+)$                 https://vocabs.ardc.edu.
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
-RewriteRule ^/def/spmile$                               https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile [R=302,L]
+RewriteRule ^/def/spmile.ttl$                           https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile [R=302,L]
 RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
 
 
@@ -211,5 +211,5 @@ RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/soil($|/.+)$                          https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
-RewriteRule ^/def/soil                                  https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
+RewriteRule ^/def/soil.ttl$                             https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
 RewriteRule ^/def/soil($|/.+)$                          https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,L]
