fix group patterns

--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -215,7 +215,6 @@ RewriteRule ^/def/asls-vegetation.ttl$                 https://vocabs.ardc.edu.a
 RewriteRule ^/def/asls-vegetation($|/.+)$              https://vocabs.ardc.edu.au/repository/api/lda/csiro/vegetation-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/vegetation$1 [R=302,L]
 
 
-
 # https://linked.data.gov.au/def/scm-swcm-1992
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -243,6 +242,6 @@ RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.
 # https://linked.data.gov.au/def/soil
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/soil($|/.+)$                          https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
+RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
 RewriteRule ^/def/soil.ttl$                             https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
-RewriteRule ^/def/soil($|/.+)$                          https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,L]
+RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,L]
