vocab-derivation-modes -> vocdermods

--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -149,11 +149,11 @@ RewriteRule ^/def/supermodel/terms(.*)$                 https://agldwg.github.io
 # https://linked.data.gov.au/def/vocdermods
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocab-derivation-modes/vocabulary.ttl? [R=302,L]
-RewriteRule ^/def/vocdermods.ttl$                        https://agldwg.github.io/vocab-derivation-modes/vocabulary.ttl? [R=302,L]
-RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocab-derivation-modes/ [R=302,L]
+RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocdermods/vocabulary.ttl? [R=302,L]
+RewriteRule ^/def/vocdermods.ttl$                        https://agldwg.github.io/vocdermods/vocabulary.ttl? [R=302,L]
+RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocdermods/ [R=302,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocab-derivation-modes/$1.ttl? [R=302,L]
-RewriteRule ^/def/vocdermods/(.+).ttl$                   https://agldwg.github.io/vocab-derivation-modes/$1.ttl? [R=302,L]
-RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocab-derivation-modes/$1 [R=302,L]
+RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocdermods/$1.ttl? [R=302,L]
+RewriteRule ^/def/vocdermods/(.+).ttl$                   https://agldwg.github.io/vocdermods/$1.ttl? [R=302,L]
+RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocdermods/$1 [R=302,L]
