BDR dataset HTML landing page

--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -1,11 +1,8 @@
-# https://linked.data.gov.au/def/nslvoc
-# National Species List Vocabulary
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
-RewriteRule ^/def/nslvoc.ttl$                           https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
-RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.html [R=302,NE,L]
+# https://linked.data.gov.au/dataset/bdr
+RewriteRule ^/dataset/bdr$                              https://bdrtesting.net/ [R=302,L]
 
+
+# https://linked.data.gov.au/def/nsl
 # National Species List Data Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -16,3 +13,12 @@ RewriteRule ^/def/nsl$                                  https://kurrawong.github
 # Profile Parts
 RewriteRule ^/def/nsl/validator$                        https://kurrawong.github.io/nsl-model/validator.ttl [R=302,L]
 RewriteRule ^/def/nsl/context.json$                     https://kurrawong.github.io/nsl-model/context.json [R=302,L]
+
+
+# https://linked.data.gov.au/def/nslvoc
+# National Species List Vocabulary
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
+RewriteRule ^/def/nslvoc.ttl$                           https://biodiversity.org.au/voc/aunsl.ttl [R=302,L]
+RewriteRule ^/def/nslvoc($|/.*)$                        https://biodiversity.org.au/voc/aunsl.html [R=302,NE,L]
