--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -295,14 +295,9 @@ RewriteMap tolower int:tolower
 RewriteRule ^/def/placenames/(.*)$                      https://geoscienceaustralia.github.io/Placenames-Ontology/placenames.html\#${tolower:$1} [R=302,L,NE]
 
 
-## https://linked.data.gov.au/def/su
-#        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-#        RewriteCond %{HTTP:Accept} text/turtle [NC]
-#        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
-#        RewriteRule ^/def/su/ont(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
-#        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
-#        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-#        RewriteCond %{HTTP:Accept} text/turtle [NC]
-#        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-#        RewriteRule ^/def/su.ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-#        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
+# https://linked.data.gov.au/def/su
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/su$                                     https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+RewriteRule ^/def/su.ttl$                                 https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+RewriteRule ^/def/su$                                     https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
