borehole-drilling-method-western-australia

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -6,6 +6,8 @@ RewriteRule ^/def/borehole-configuration($|/.*) "https://vocabulary.gswa.kurrawo
 
 RewriteRule ^/def/borehole-geometry($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-geometry$1" [R=302,NE,L]
 
+RewriteRule ^/def/borehole-drilling-method-western-australia($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-western-australia$1" [R=302,NE,L]
+
 RewriteRule ^/def/borehole-start-point-setting($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-start-point-setting$1" [R=302,NE,L]
 
 RewriteRule ^/def/CRIRSCO-mineral-resource-reporting($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/CRIRSCO-mineral-resource-reporting$1" [R=302,NE,L]
