--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -1,4 +1,6 @@
 # https://linked.data.gov.au/def/csdm
+RewriteRule ^/def/csdm$ "https://icsm-au.github.io/3d-csdm/docs/" [R=302,L]
+
 RewriteRule ^/def/csdm/2022$ "https://icsm-au.github.io/3d-csdm-design/2022/spec.html" [R=302,L]
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -44,8 +46,6 @@ RewriteRule ^/def/csdm/surveyobs$ "https://icsm-au.github.io/3d-csdm/surveyobs.t
 RewriteRule ^/def/csdm/surveyobs.ttl$ "https://icsm-au.github.io/3d-csdm/surveyobs.ttl" [R=302,L]
 RewriteRule ^/def/csdm/surveyobs$ "https://icsm-au.github.io/3d-csdm/surveyobs.html" [R=302,NE,L]
 
-# https://linked.data.gov.au/def/csdm catch-all
-RewriteRule ^/def/csdm/ "https://icsm-au.github.io/3d-csdm/vocab-management.html" [R=302,L]
 
 # https://linked.data.gov.au/def/anzgeodcat
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
