GSWA Supermodel and Component Models

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -1,5 +1,34 @@
 # Status note: GSWA's vocab system cannot resolve Turtle data yet, so only HTML redirects are currently in place
 
+# https://linked.data.gov.au/def/gswa-supermodel
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/gswa-supermodel$ https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/profile.ttl [R=302,L]
+RewriteRule ^/def/gswa-supermodel.ttl$ https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/profile.ttl [R=302,L]
+RewriteRule ^/def/gswa-supermodel$ https://kurrawong.github.io/gswa-supermodel/ [R=302,L]
+
+# https://linked.data.gov.au/def/bore
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/bore$                         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/bores.ttl [R=302,L]
+RewriteRule ^/def/bore.ttl$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/bores.ttl [R=302,L]
+RewriteRule ^/def/bore$                         https://kurrawong.github.io/gswa-supermodel/components/bores/ [R=302,L]
+
+# https://linked.data.gov.au/def/mine
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/mine$                         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mines.ttl [R=302,L]
+RewriteRule ^/def/mine.ttl$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mines.ttl [R=302,L]
+RewriteRule ^/def/mine$                         https://kurrawong.github.io/gswa-supermodel/components/mines/ [R=302,L]
+
+# https://linked.data.gov.au/def/tenement
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/tenement$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/tenements.ttl [R=302,L]
+RewriteRule ^/def/tenement.ttl$                 https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/tenements.ttl [R=302,L]
+RewriteRule ^/def/tenement$                     https://kurrawong.github.io/gswa-supermodel/components/tenements/ [R=302,L]
+
+
 RewriteRule ^/def/australian-physiographic-units($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/australian-physiographic-units$1" [R=302,NE,L]
 
 RewriteRule ^/def/borehole-configuration($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-configuration$1" [R=302,NE,L]
