tenement -> mining-authority

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -24,9 +24,9 @@ RewriteRule ^/def/mine$                         https://kurrawong.github.io/gswa
 # https://linked.data.gov.au/def/tenement
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/tenement$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/tenement.ttl [R=302,L]
-RewriteRule ^/def/tenement.ttl$                 https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/tenement.ttl [R=302,L]
-RewriteRule ^/def/tenement$                     https://kurrawong.github.io/gswa-supermodel/components/tenement/ [R=302,L]
+RewriteRule ^/def/mining-authority$             https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authority.ttl [R=302,L]
+RewriteRule ^/def/mining-authority.ttl$         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authority.ttl [R=302,L]
+RewriteRule ^/def/mining-authority$             https://kurrawong.github.io/gswa-supermodel/components/mining-authority/ [R=302,L]
 
 
 RewriteRule ^/def/australian-physiographic-units($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/australian-physiographic-units$1" [R=302,NE,L]
