mining-authority -> mining-authorisation

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -21,12 +21,12 @@ RewriteRule ^/def/mine$                         https://raw.githubusercontent.co
 RewriteRule ^/def/mine.ttl$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mine.ttl [R=302,L]
 RewriteRule ^/def/mine$                         https://kurrawong.github.io/gswa-supermodel/components/mine/ [R=302,L]
 
-# https://linked.data.gov.au/def/tenement
+# https://linked.data.gov.au/def/mining-authorisation
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/mining-authority$             https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authority.ttl [R=302,L]
-RewriteRule ^/def/mining-authority.ttl$         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authority.ttl [R=302,L]
-RewriteRule ^/def/mining-authority$             https://kurrawong.github.io/gswa-supermodel/components/mining-authority/ [R=302,L]
+RewriteRule ^/def/mining-authorisation$             https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authorisation.ttl [R=302,L]
+RewriteRule ^/def/mining-authorisation.ttl$         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/mining-authorisation.ttl [R=302,L]
+RewriteRule ^/def/mining-authorisation$         https://kurrawong.github.io/gswa-supermodel/components/mining-authorisation/ [R=302,L]
 
 
 RewriteRule ^/def/australian-physiographic-units($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/australian-physiographic-units$1" [R=302,NE,L]
