fix qg-sites HTTPS

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -421,9 +421,9 @@ RewriteRule ^/def/qg-security-classifications($|/.*)$ "https://vocabs.gsq.digita
 # https://linked.data.gov.au/def/qg-sites
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/qg-sites($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/qg-sites(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/qg-sites($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1" [R=302,NE,L]
+RewriteRule ^/def/qg-sites($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=https://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/qg-sites(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=https://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/qg-sites($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=https://linked.data.gov.au/def/qg-sites$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/qld-data-licenses
