GSWA 2 x new vocabs

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -47,6 +47,10 @@ RewriteRule ^/def/geological-feature-type($|/.*) "https://vocabulary.gswa.kurraw
 
 RewriteRule ^/def/gswa-collection-facilities($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/gswa-collection-facilities$1" [R=302,NE,L]
 
+RewriteRule ^/def/gswa-rock-classification-scheme($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/gswa-rock-classification-scheme$1" [R=302,NE,L]
+
+RewriteRule ^/def/gswa-vocabulary-themes($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/gswa-vocabulary-themes$1" [R=302,NE,L]
+
 RewriteRule ^/def/JORC-Code($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/JORC-Code$1" [R=302,NE,L]
 
 RewriteRule ^/def/location-method($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/location-method$1" [R=302,NE,L]
