--- a/conf/linked.data.gov.au/org/gssa.conf
+++ b/conf/linked.data.gov.au/org/gssa.conf
@@ -16,11 +16,11 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/mer-doc-types($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.au/def/mer-doc-types$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/mer-doc-types($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.au/def/mer-doc-types$1" [R=302,NE,L]
 
-# https://linked.data.gov.aumer-stakeholder-types/mer-for-codes
+# https://linked.data.gov.au/def/mer-for-codes
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^mer-stakeholder-types/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.aumer-stakeholder-types/mer-for-codes$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^mer-stakeholder-types/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.aumer-stakeholder-types/mer-for-codes$1" [R=302,NE,L]
+RewriteRule ^/def/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.au/def/mer-for-codes$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.aum/def/mer-for-codes$1" [R=302,NE,L]
 
 # https://linked.data.gov.au/def/maintenancefrequencycode
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
